# patcher

./: README.md  README.txt
ico/: CMakeLists.txt  README.txt
ico/include/: ico.h
ico/src/: main.c  obfuscator.c  pe_parser.c  stub_generator.c  test.asm
